# AgentMaker

./: .gitignore  README.md
agents/briefsmith-agent/: README.md  pyproject.toml
agents/briefsmith-agent/src/briefsmith_agent/: __init__.py  cli.py  errors.py  formatter.py  models.py  parser.py  reader.py  writer.py
agents/briefsmith-agent/tests/: test_cli.py  test_formatter.py  test_parser.py  test_reader.py  test_writer.py
agents/stock-master/: AGENT_PROMPT.md  README.md  pyproject.toml
agents/stock-master/src/stock_master/: __init__.py  cli.py  prompt_assets.py
agents/stock-master/tests/: test_cli.py
docs/: COST_SAFETY.md
scripts/: new-agent.ps1
templates/python-cli-agent/: README.md  pyproject.toml
templates/python-cli-agent/src/__AGENT_PACKAGE__/: __init__.py  cli.py
templates/python-cli-agent/tests/: test_cli.py
