[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briefsmith-agent"
version = "0.1.0"
description = "Starter Python CLI agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AgentMaker" }]
dependencies = []

[project.scripts]
briefsmith-agent = "briefsmith_agent.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

