[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-master"
version = "0.1.0"
description = "Stock Master scaffold: prompt blueprint and implementation brief CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AgentMaker" }]
dependencies = []

[project.scripts]
stock-master = "stock_master.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
